--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -861,7 +861,9 @@
    "id": "f0f93119-6cb8-4f0b-a166-6e1f9ab3a126",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle"
+   ]
   },
   {
    "cell_type": "code",
