Updated app.py and trained_model.py with working car price prediction

--- a/Boosting.ipynb
+++ b/Boosting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "b95d2373-0043-4866-8b82-7787626ab99d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "7fe7eb3c-e4ad-4d27-9a92-549dcd19a9a8",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "4  Individual       Manual  Second Owner  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "9ceef010-5ca7-4a0f-9aed-6e77840853d7",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "(4340, 8)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "361f9acb-a424-47fe-ae4f-be7b2819aba7",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "6d0e20c2-0e47-492a-a466-df32953f8c18",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "9d6947dd-d402-4f59-878d-b6fe24ca3793",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "max    2020.000000   8.900000e+06  806599.000000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "1965a547-ae05-4036-a057-f95248bf8bd4",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "8991814d-e310-4d4e-89e5-60aa1381a69f",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "87942ff3-6463-4348-a6fb-edb61f3a5676",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "067adf81-52a3-41f9-bc7f-91c90ca4958f",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "(3577, 8)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "ac0212d3-3152-425a-acf2-9429e00240ad",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "cfca32d2-c867-42c0-94f8-3315df48b142",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "888e080c-5b1a-4500-83f2-11ee6a7141c4",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "id": "9ef26ca0-44f8-43f8-bc57-af523f17ded8",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "8ee05ec5-92cb-4fec-9241-a9767b4042ed",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "id": "30b3a9f0-0271-4678-8aab-3600906bc617",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "f7f573b0-d9ef-4d48-9820-e2258f319fda",
    "metadata": {},
    "outputs": [],
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "82b085e8-b3b0-465c-8ad0-5902a9796623",
    "metadata": {},
    "outputs": [],
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "948c3745-4abc-4452-9075-b573928185a7",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "a856a391-87f0-4622-9de5-4e2e827ec677",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "b4bd0d1a-11cf-4f12-8371-773af4567e07",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "e77a65a1-95ce-4f18-8782-75e1224707c6",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "8eba7ba0-ecf6-48c8-a4cd-778f00ed330f",
    "metadata": {},
    "outputs": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "6efd813a-fc25-4dc2-a673-165c74c82dab",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "id": "edad7385-fcaf-4f80-b4b2-4f197cd9e5a8",
    "metadata": {},
    "outputs": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "id": "35e7d5dc-7880-4aa1-ac6e-05ea497ffb8e",
    "metadata": {},
    "outputs": [
@@ -819,45 +819,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "851ca76a-ff0e-48f4-b39c-96ffa355774c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0       18\n",
-      "1       18\n",
-      "2       13\n",
-      "3        8\n",
-      "4       11\n",
-      "        ..\n",
-      "4335    11\n",
-      "4336    11\n",
-      "4337    16\n",
-      "4338     9\n",
-      "4339     9\n",
-      "Name: car_age, Length: 3559, dtype: int64 0        70000\n",
-      "1        50000\n",
-      "2       100000\n",
-      "3        46000\n",
-      "4       141000\n",
-      "         ...  \n",
-      "4335     80000\n",
-      "4336     80000\n",
-      "4337     83000\n",
-      "4338     90000\n",
-      "4339     40000\n",
-      "Name: km_driven, Length: 3559, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "f0f93119-6cb8-4f0b-a166-6e1f9ab3a126",
    "metadata": {},
    "outputs": [],
@@ -867,11 +837,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8952ea37-ed6e-4bd4-8e64-81763cdf4206",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset columns: ['name', 'year', 'selling_price', 'km_driven', 'fuel', 'seller_type', 'transmission', 'owner', 'car_age']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Dataset columns:\", df.columns.tolist())"
+   ]
   },
   {
    "cell_type": "code",
